--- a/kit/atoms/ScrollArea/ScrollArea.less
+++ b/kit/atoms/ScrollArea/ScrollArea.less
@@ -3,6 +3,8 @@
 /////////////////////////////////////////////
 
 .scrollbar-container {
+  width: 100%;
+  min-width: 100%;
   .ps__rail-x {
     display: none;
   }
